cleaned up html

--- a/index.html
+++ b/index.html
@@ -1,66 +1,36 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>FB Style Page Slide Menu</title> 
+	<title>FB Style Menu</title> 
 	<meta id="extViewportMeta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />	
 	<link rel="stylesheet" href="css/jquery.mobile-1.0rc2.min.css" />
-	<link rel="stylesheet" href="css/main.css?v=30" />
-	<link rel="stylesheet" media="only screen and (-webkit-min-device-pixel-ratio: 2)" type="text/css" href="css/iphone4.css?v=30" />
-	<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
-	<script type="text/javascript" src="js/jquery.mobile-1.0rc2.min.js"></script>
-	<script type="text/javascript" src="js/app.js?v=30"></script>
+	<link rel="stylesheet" href="css/main.css?v=31" />
 </head> 
-
-<body> s
+<body> 
 <div id="menu">
-	<div id="memberDetails">
-		<h3><span>Welcome,</span><br /> <em>John Doe</em></h3>
-	</div>
-
+<h3>Menu</h3>
 	<ul>
-		<li class="active"><a href="#home" class="contentLink">Dashboard <span class="icon"></span></a></li>
-		<li><a href="#page1" class="contentLink">Subpage 1 <span class="icon"></span></a></li>
-		<li><a href="#page2" class="contentLink">Subpage 2 <span class="icon"></span></a></li>
-		<li><a href="#page3" class="contentLink">Subpage 3 <span class="icon"></span></a></li>
+		<li class="active"><a href="#home" class="contentLink">Home </a></li>
+		<li><a href="#home" class="contentLink">About </a></li>
+		<li><a href="#home" class="contentLink">Portfolio </a></li>
+		<li><a href="#home" class="contentLink">Contact </a></li>
 	</ul>
 </div>
-
-
-
-
 <div data-role="page" class="pages" id="home">
 	<div data-role="header">
-	<a href="#"class="showMenu menuBtn">Menu</a>
-		<h1>Dashboard</h1>
+	<a href="#"class="showMenu">Menu</a>
+		<h1>FB Style Menu</h1>
 	</div><!-- /header -->
 	<div data-role="content">
-		<h3>FB Style Page Slide Menu</h3>
-		<p>You can swipe to show the menu and hide it.</p>
+		<p><strong>Note: You can swipe right/left to show/close menu.</strong></p>
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-		
-
 	</div><!-- /content -->
 </div><!-- /page -->
-
-
-
-<div data-role="page" class="pages" id="page1">
-	<div data-role="header">
-	<a href="#"class="showMenu menuBtn">Menu</a>
-		<h1>Subpage 1</h1>
-	</div><!-- /header -->
-
-	<div data-role="content">		
-		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	</div><!-- /content -->
-</div><!-- /page -->
-
-
-
-
-
+	<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
+	<script type="text/javascript" src="js/jquery.mobile-1.0rc2.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
