use submodules, clean CSS, use new jQuery and jQuery mobile versions, remove unused files, clean JS (remove duplicated code)

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta id="extViewportMeta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />	
-	<link rel="stylesheet" href="css/jquery.mobile-1.0rc2.min.css" />
-	<link rel="stylesheet" href="css/main.css?v=31" />
+	<link rel="stylesheet" href="lib/jquery-mobile/jquery.mobile.min.css" />
+	<link rel="stylesheet" href="css/main.css" />
 </head> 
 <body> 
-<div id="menu">
-<h3>Menu</h3>
+<div id="menu" style="display: none;">
+	<h3>Menu</h3>
 	<ul>
 		<li class="active"><a href="#home" class="contentLink">Home </a></li>
 		<li><a href="#home" class="contentLink">About </a></li>
@@ -29,8 +29,8 @@
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 	</div><!-- /content -->
 </div><!-- /page -->
-	<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
-	<script type="text/javascript" src="js/jquery.mobile-1.0rc2.min.js"></script>
+	<script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="lib/jquery-mobile/jquery.mobile.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
